[tool.poetry]
name = "telegram-user-tracker"
version = "0.2.0"
description = ""
authors = ["Hung-I Wang <whygowe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
telethon = "^1.24"
cryptg = "^0.2"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
pylint = "^2.12"
rope = "^0.22"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
